--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -1,21 +1,21 @@
-name: Process master push or pr
+name: Process linjasto2021 push or pr
 on:
   push:
     branches:
-      - master
+      - linjasto2021
   pull_request:
     branches:
-      - master
+      - linjasto2021
 jobs:
   docker-push:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/linjasto2021'
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Build docker image from master and push it
+      - name: Build docker image from linjasto2021 and push it
         run: ./.github/workflows/scripts/build_and_push_dev.sh
         env:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}
           DOCKER_AUTH: ${{ secrets.DOCKER_AUTH }}
-          DOCKER_BASE_TAG: latest
+          DOCKER_BASE_TAG: linjasto2021
